# fastapi_course

./: README.md  pyproject.toml
app/: main.py
