[tool.poetry]
name = "fastapi_course"
version = "0.1.0"
description = "Just a simple FastAPI sample"
authors = ["Alfonso Montilla <montilla05alfonso@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.75.1"
pydantic = "^1.9.0"
requests = "^2.27.1"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
mypy = "^0.942"
flake8 = "^4.0.1"
black = "^22.3.0"
types-requests = "^2.27.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
